# Vision_Control1

./: .gitignore  README.md  can.md
sh/: can.sh  comm.sh  control.sh  kill_control.sh  usb.sh
src/skider_control/: CMakeLists.txt  package.xml
src/skider_control/config/: params.yaml
src/skider_control/include/skider_control/: chassis_demo_node.hpp  gimbal_demo_node.hpp
src/skider_control/launch/: skider_control.launch.py
src/skider_control/src/: chassis_demo_node.cpp  gimbal_demo_node.cpp
src/skider_hw/: CMakeLists.txt  package.xml
src/skider_hw/config/: hardware_settings.yaml
src/skider_hw/include/skider_hw/: gimbal_hw_node.hpp  transport_package.h
src/skider_hw/launch/: skider_hw.launch.py
src/skider_hw/sdk/: CMakeLists.txt
src/skider_hw/sdk/include/: can.hpp  transporter_interface.hpp  usbcdc_transporter.hpp
src/skider_hw/sdk/src/: can.cpp  usbcdc_transporter.cpp
src/skider_hw/src/: gimbal_hw_node.cpp
src/skider_interface/: CMakeLists.txt  README.md  package.xml
src/skider_interface/msg/: ChassisCommand.msg  ChassisState.msg  DeviceOnline.msg  GimbalCommand.msg  GimbalDebug.msg  GimbalState.msg  Imu.msg  RefereeRaw.msg  RefereeShooter.msg  Sbus.msg  Target.msg
src/skider_sensor/: CMakeLists.txt  package.xml
src/skider_sensor/config/: sensor_settings.yaml
src/skider_sensor/include/skider_sensor/: imu_sensor_node.hpp  remote_sensor_node.hpp
src/skider_sensor/launch/: skider_sensor.launch.py
src/skider_sensor/sdk/imu/: CMakeLists.txt
src/skider_sensor/sdk/imu/include/: ahrs_interface.hpp  mahony_ahrs.hpp
src/skider_sensor/sdk/imu/src/: mahony_ahrs.cpp
src/skider_sensor/sdk/remote/: CMakeLists.txt
src/skider_sensor/sdk/remote/include/: remote_interface.hpp  sbus_remote.hpp
src/skider_sensor/sdk/remote/src/: sbus_remote.cpp
src/skider_sensor/src/: imu_sensor_node.cpp  remote_sensor_node.cpp
